<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/medium"
    app:cardCornerRadius="@dimen/medium"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/large"
        android:paddingTop="@dimen/large"
        android:paddingRight="@dimen/large"
        android:paddingBottom="@dimen/large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/medium"
                android:src="@drawable/ic_today_black_24dp"
                android:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:attr/textColorPrimary"
                tools:text="date" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/day_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:text="N°C" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/temp_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:text="N°C"
                        android:textColor="?android:attr/textColorPrimary" />

                    <TextView
                        android:id="@+id/temp_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:gravity="center_vertical"
                        android:text="N°C"
                        android:textColor="?android:attr/textColorPrimary" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:src="@drawable/ic_timer_sand_48dp" />

            <TextView
                android:id="@+id/forecast"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:attr/textColorPrimary"
                tools:text="forecast" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/day_temp_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimaryDarkTr"
                        android:gravity="center"
                        android:text="@string/morning"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white_tr"
                        android:gravity="center"
                        android:text="@string/day"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/eve"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimaryDark"
                        android:gravity="center"
                        android:text="@string/night"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/temp_morn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimaryDarkTr"
                        android:gravity="center"
                        android:padding="@dimen/small"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        tools:text="N°C" />

                    <TextView
                        android:id="@+id/temp_day"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/small"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black"
                        tools:text="N°C" />

                    <TextView
                        android:id="@+id/temp_eve"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:padding="@dimen/small"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        tools:text="N°C" />


                    <TextView
                        android:id="@+id/temp_night"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimaryDark"
                        android:gravity="center"
                        android:padding="@dimen/small"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        tools:text="N°C" />


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:drawableStart="@drawable/ic_water_percent_black_24dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:padding="@dimen/small"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:attr/textColorPrimary"
                tools:text="60%" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:drawableStart="@drawable/ic_altimeter_black_24dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:padding="@dimen/small"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:attr/textColorPrimary"
                tools:text="100kPa" />

            <TextView
                android:id="@+id/wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:drawableStart="@drawable/ic_weather_windy_black_24dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:padding="@dimen/small"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:attr/textColorPrimary"
                tools:text="4m/s" />


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>